--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 arrow==1.2.1
 asgiref==3.4.1
 DateTime==4.3
+dj-database-url==0.5.0
 Django==3.2.8
+django-heroku==0.3.1
 Faker==9.8.2
 numpy==1.19.5
 pandas==1.1.5
 pendulum==2.1.2
+psycopg2==2.9.2
 psycopg2-binary==2.9.1
 PuLP==2.5.1
 python-dateutil==2.8.2
@@ -15,4 +18,5 @@ six==1.16.0
 sqlparse==0.4.2
 text-unidecode==1.3
 typing-extensions==3.10.0.2
+whitenoise==5.3.0
 zope.interface==5.4.0
