--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pendulum==2.1.2
 psycopg2==2.9.2
 psycopg2-binary==2.9.1
 PuLP==2.5.1
+pytest~=6.2.5
 python-dateutil==2.8.2
 pytz==2021.3
 pytzdata==2020.1
@@ -20,3 +21,4 @@ text-unidecode==1.3
 typing-extensions==3.10.0.2
 whitenoise==5.3.0
 zope.interface==5.4.0
+
