--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,6 @@ jobs:
       run: |
         python -m pip install pytest-django
         pytest
+    - name: Coverage
+      run: |
+        pip install
