--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,40 @@
 arrow==1.2.1
 asgiref==3.4.1
+attrs==21.2.0
+coverage==6.2
 DateTime==4.3
 dj-database-url==0.5.0
 Django==3.2.8
 django-heroku==0.3.1
 Faker==9.8.2
+flake8==4.0.1
+importlib-metadata==4.2.0
+iniconfig==1.1.1
+mccabe==0.6.1
 numpy==1.19.5
+packaging==21.3
 pandas==1.1.5
 pendulum==2.1.2
+pluggy==1.0.0
 psycopg2==2.9.2
 psycopg2-binary==2.9.1
 PuLP==2.5.1
-pytest~=6.2.5
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.6
+pytest==6.2.5
+pytest-cov==3.0.0
+pytest-django==4.4.0
 python-dateutil==2.8.2
 pytz==2021.3
 pytzdata==2020.1
 six==1.16.0
 sqlparse==0.4.2
 text-unidecode==1.3
+toml==0.10.2
+tomli==1.2.2
 typing-extensions==3.10.0.2
 whitenoise==5.3.0
+zipp==3.6.0
 zope.interface==5.4.0
-
