--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pytest==6.2.5
 pytest-cov==3.0.0
 pytest-django==4.4.0
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2021.3
 pytzdata==2020.1
 six==1.16.0
