--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       DATABASE_PASSWORD: 'postgres'
       DATABASE_HOST: 'localhost'
       DATABASE_PORT: 5432
+      
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -46,3 +47,11 @@ jobs:
       run: |
         python -m pip install pytest-django
         pytest
+    - name: Coverage
+      run: |
+        pip install pytest-cov
+        pytest --cov
+    - name: "Upload coverage to Codecov"
+      uses: codecov/codecov-action@v1
+      with:
+        fail_ci_if_error: true
