--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = optyjaciel.settings
 python_files = tests.py test_*.py
+filterwarnings = ignore::DeprecationWarning
