--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
+amqp==5.1.1
 arrow==1.2.1
 asgiref==3.4.1
+atomicwrites==1.4.0
 attrs==21.2.0
+billiard==3.6.4.0
+celery==5.2.7
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+colorama==0.4.4
 coverage==6.2
 DateTime==4.3
 dj-database-url==0.5.0
@@ -10,12 +19,14 @@ Faker==9.8.2
 flake8==4.0.1
 importlib-metadata==4.2.0
 iniconfig==1.1.1
+kombu==5.2.4
 mccabe==0.6.1
 numpy==1.19.5
 packaging==21.3
 pandas==1.1.5
 pendulum==2.1.2
 pluggy==1.0.0
+prompt-toolkit==3.0.29
 psycopg2==2.9.2
 psycopg2-binary==2.9.1
 PuLP==2.5.1
@@ -36,6 +47,8 @@ text-unidecode==1.3
 toml==0.10.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
+vine==5.0.0
+wcwidth==0.2.5
 whitenoise==5.3.0
 zipp==3.6.0
 zope.interface==5.4.0
