--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 amqp==5.1.1
+APScheduler==3.9.1
 arrow==1.2.1
 asgiref==3.4.1
 atomicwrites==1.4.0
 attrs==21.2.0
 billiard==3.6.4.0
 celery==5.2.7
+cffi==1.15.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -17,6 +19,8 @@ Django==3.2.8
 django-heroku==0.3.1
 Faker==9.8.2
 flake8==4.0.1
+gevent==21.12.0
+greenlet==1.1.2
 importlib-metadata==4.2.0
 iniconfig==1.1.1
 kombu==5.2.4
@@ -32,6 +36,7 @@ psycopg2-binary==2.9.1
 PuLP==2.5.1
 py==1.11.0
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
 pyparsing==3.0.6
 pytest==6.2.5
@@ -40,6 +45,7 @@ pytest-django==4.4.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 pytzdata==2020.1
 six==1.16.0
 sqlparse==0.4.2
@@ -47,8 +53,11 @@ text-unidecode==1.3
 toml==0.10.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
+tzdata==2022.1
+tzlocal==4.2
 vine==5.0.0
 wcwidth==0.2.5
 whitenoise==5.3.0
 zipp==3.6.0
+zope.event==4.5.0
 zope.interface==5.4.0
